Consumo de igdb
