# src/routers/login.router.js
@@ -1,8 +1,0 @@
-const funcionLogin=require('../controllers/login.controllers')
-const express=require('express')
-const router=express.Router()
-
-router.post('/',funcionLogin.createUsuario)
-router.post('/loginUser',funcionLogin.loginUsuario)
-
-module.exports=router
